sign up feature This is a commit for the application's  sign up feature using modal pop up design concept.
[Deliver # 160369243]

--- a/UI/index.html
+++ b/UI/index.html
@@ -55,10 +55,12 @@
 
   <div id="modal" class="modal-box">
     <div class="modal-box-content">
-
+      <div class="modal-class-log">
+        <div class="modal-class-one" id="modal-class-one-log" onclick="openModal()">Login</div>
+        <div class="modal-class-one" id="modal-class-one-reg" onclick="modifyModal()">Sign up</div>
+      </div>
       <div class="avatar-hero">
         <br>
-        <span onclick="closeModal()" class="cancel-btn" title="Close Modal">&times;</span>
         <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQ02t10e803wAb6yvCxp94Sv9XxVMtqOFDganij2UVcDK4uqUNB" alt="Avatar"
           class="avatar">
       </div>
@@ -68,7 +70,7 @@
           <label>
             <b>Email</b>
           </label>
-          <input class="form-input email-input" type="email" placeholder="@gmail.com" name="eml" required>
+          <input class="form-input form-b-space" type="email" placeholder="@gmail.com" name="eml" required>
           <label>
             <b>Password</b>
           </label>
@@ -76,14 +78,57 @@
           <div class="sign-btn-box">
             <button class="sign-btn" type="submit">Login</button>
           </div>
-          <p>Do not have an account? Create an account
-            <a href="./signup.html">here...</a>
-          </p>
         </div>
       </form>
 
       <div class="form-box">
         <button onclick="closeModal()" type="button" class="btn-red">Cancel</button>
+      </div>
+
+    </div>
+  </div>
+
+  <div id="modal-two" class="modal-box">
+    <div class="modal-box-content">
+      <div class="modal-class-log">
+        <div class="modal-class-one" id="modal-class-one-log" onclick="openModal()">Login</div>
+        <div class="modal-class-one" id="modal-class-one-reg" onclick="modifyModal()">Sign up</div>
+      </div>
+
+      <div class="acct-head">
+        <div>Create an account</div>
+      </div>
+
+      <form class="form-box" action="/action_page.php">
+        <div class="form-section">
+          <label>
+            <b>Full name</b>
+          </label>
+          <input class="form-input form-b-space" type="text" placeholder="Your name" name="fulname" required>
+
+          <label>
+            <b>Email</b>
+          </label>
+          <input class="form-input form-b-space" type="email" placeholder="@gmail.com" name="eml" required>
+
+          <label>
+            <b>Telephone</b>
+          </label>
+          <input class="form-input form-b-space" type="tel" placeholder="+234" name="psw" required>
+
+          <label>
+            <b>Password</b>
+          </label>
+          <input class="form-input" type="password" placeholder="Enter Password" name="psw" required>
+
+          <div class="sign-btn-box">
+            <button class="sign-btn" type="submit">Sign up</button>
+          </div>
+        </div>
+      </form>
+
+      <div class="form-box">
+        <button onclick="closeModalTwo()" type="button" class="btn-red">Cancel</button>
       </div>
 
     </div>
