--- a/UI/index.html
+++ b/UI/index.html
@@ -35,7 +35,7 @@
         </div>
       </div>
       <div class="btn-space">
-        <div class="order-btn">Order Now</div>
+        <div class="order-btn"><a href="./order.html">Order Now</a></div>
       </div>
     </div>
 
