ft- user's page This is a commit for: - user's account setting feature - A user should be able to see a history of ordered food.
[Delivers #160380781]

--- a/UI/order.html
+++ b/UI/order.html
@@ -18,8 +18,8 @@
         <div class="logo"></div>
       </div>
       <div id="user-auth-box">
-         <i class="material-icons">account_circle</i>
-        <div class="prof-name">Tholle Mayer</div>
+           <i class="material-icons">account_circle</i>
+           <a href="./user.html"><div class="prof-name">Tholle Mayer</div></a>
       </div>
     </div>
   
