ft- Admin login This is a commit for the user interface design for an admin.
[Delivers #160392563]

--- a/UI/index.html
+++ b/UI/index.html
@@ -35,7 +35,9 @@
         </div>
       </div>
       <div class="btn-space">
-        <div class="order-btn"><a href="./order.html">Order Now</a></div>
+        <div class="order-btn">
+          <a href="./order.html">Order Now</a>
+        </div>
       </div>
     </div>
 
@@ -83,6 +85,8 @@
 
       <div class="form-box">
         <button onclick="closeModal()" type="button" class="btn-red">Cancel</button>
+        Are you an admin? click
+        <a id="click-me" href="./login.html">here...</a>
       </div>
 
     </div>
