Linking pages This is a commit - for linking html pages to demonstrate page flow. - for hosting on gh-pages branch

--- a/UI/index.html
+++ b/UI/index.html
@@ -16,6 +16,12 @@
     <div class="top-nav">
       <div class="logo-box">
         <div class="logo"></div>
+        <div class="menu">
+            <ul class="menu-list-ul">
+              <li class="menu-list"><a href="./index.html">Home</a></li>
+              <li class="menu-list"><a href="./order.html">Food</a></li>
+            </ul>
+          </div>
       </div>
       <div id="auth-box">
         <div class="btn" onclick="openModal()">Login/Sign up</div>
@@ -35,9 +41,11 @@
         </div>
       </div>
       <div class="btn-space">
-        <div class="order-btn">
-          <a href="./order.html">Order Now</a>
-        </div>
+        <a href="./order.html">
+          <div class="order-btn">
+            Order Now
+          </div>
+        </a>
       </div>
     </div>
 
