--- a/UI/admin.html
+++ b/UI/admin.html
@@ -16,6 +16,12 @@
     <div class="top-nav">
       <div class="logo-box">
         <div class="logo"></div>
+        <div class="menu">
+                <ul class="menu-list-ul">
+                  <li class="menu-list"><a href="./index.html">Home</a></li>
+                  <li class="menu-list">Food</li>
+                </ul>
+              </div>
       </div>
     </div>
 
