--- a/UI/user.html
+++ b/UI/user.html
@@ -16,6 +16,12 @@
     <div class="top-nav">
       <div class="logo-box">
         <div class="logo"></div>
+        <div class="menu">
+          <ul class="menu-list-ul">
+            <li class="menu-list"><a href="./index.html">Home</a></li>
+            <li class="menu-list"><a href="./order.html">Food</a></li>
+          </ul>
+        </div>
       </div>
       <div id="user-auth-box">
         <i class="material-icons">account_circle</i>
