Feedback week one This is a commit for implementing feedbacks on the following: - home page design to allow customer order   for food on the go. - removing form input outline - having a single page to view a specific   food. - making form inputs and cards large   enough.
[ Fixes ]

--- a/UI/admin.html
+++ b/UI/admin.html
@@ -9,6 +9,7 @@
   <link rel="stylesheet" type="text/css" href="../UI/css/admin.css">
   <link href="https://fonts.googleapis.com/css?family=Muli" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -19,7 +20,7 @@
         <div class="menu">
                 <ul class="menu-list-ul">
                   <li class="menu-list"><a href="./index.html">Home</a></li>
-                  <li class="menu-list">Food</li>
+              
                 </ul>
               </div>
       </div>
@@ -119,10 +120,31 @@
               </div>
           </div>
       </div>
+      <div class="contact-box">
+        <div class="contact-box-fix">
+          <div class="contact-header">CONTACT US</div>
+          <div class="contact-content">
+            <div class="contact-mini">
+              <i class="fa fa-map-marker"></i>
+              <div class="contact-text">24b Exodus lane, besides Andela Epic Tower, Ilupeju, Lagos</div>
+            </div>
+            <div class="contact-mini">
+              <i class="fa fa-phone"></i>
+              <div class="contact-text">+2348138776199, +2348011144428</div>
+            </div>
+            <div class="contact-mini">
+              <i class="fa fa-envelope"></i>
+              <div class="contact-text">fastfoodfast@fsf.com</div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-
-
   </div>
+  <footer>
+    <i class="fa fa-copyright"></i>
+    <div class="footer-text">House of jiro media concepts</div>
+  </footer>
 </body>
 
 </html>
