--- a/UI/index.html
+++ b/UI/index.html
@@ -23,13 +23,13 @@
               <a href="./index.html">Home</a>
             </li>
             <li class="menu-list">
-              <a href="./order.html">Food</a>
+              <a href="./index.html">About Us</a>
             </li>
           </ul>
         </div>
       </div>
       <div id="auth-box">
-          <i class="material-icons cart-icon">shopping_cart</i>
+        <a href="./cart.html"><i class="material-icons cart-icon">shopping_cart</i></a>
         <div class="btn" onclick="openModal()">Login/Sign up</div>
       </div>
     </div>
@@ -56,71 +56,90 @@
       <div class="meal-container">
         <div class="meal-box-header">Menu</div>
         <div class="meal-box-content">
-          <div class="meal-single">
-            <div class="meal-img"></div>
-            <div class="meal-info">
-              <div class="meal-info-title">Bugger</div>
-              <div class="meal-info-price">#500</div>
-              <div class="meal-info-cart">
-                <div class="to-cart-btn">Add to cart</div>
+          
+          <a href="./meal.html">
+            <div class="meal-single">
+              <div class="meal-img"></div>
+              <div class="meal-info">
+                <div class="meal-info-title">Cheese Bugger</div>
+                <div class="meal-info-price">
+                  <span>₦</span>500</div>
+                <div class="meal-info-cart">
+                  <div class="to-cart-btn">Add to cart</div>
+                </div>
               </div>
             </div>
-          </div>
+          </a>
 
-          <div class="meal-single">
-            <div class="meal-img"></div>
-            <div class="meal-info">
-              <div class="meal-info-title">Bugger</div>
-              <div class="meal-info-price">#500</div>
-              <div class="meal-info-cart">
-                <div class="to-cart-btn">Add to cart</div>
+          <a href="./meal.html">
+            <div class="meal-single">
+              <div class="meal-img"></div>
+              <div class="meal-info">
+                <div class="meal-info-title">Cheese Bugger</div>
+                <div class="meal-info-price">
+                  <span>₦</span>500</div>
+                <div class="meal-info-cart">
+                  <div class="to-cart-btn">Add to cart</div>
+                </div>
               </div>
             </div>
-          </div>
+          </a>
 
-          <div class="meal-single">
-            <div class="meal-img"></div>
-            <div class="meal-info">
-              <div class="meal-info-title">Bugger</div>
-              <div class="meal-info-price">#500</div>
-              <div class="meal-info-cart">
-                <div class="to-cart-btn">Add to cart</div>
+          <a href="./meal.html">
+            <div class="meal-single">
+              <div class="meal-img"></div>
+              <div class="meal-info">
+                <div class="meal-info-title">Cheese Bugger</div>
+                <div class="meal-info-price">
+                  <span>₦</span>500</div>
+                <div class="meal-info-cart">
+                  <div class="to-cart-btn">Add to cart</div>
+                </div>
               </div>
             </div>
-          </div>
+          </a>
 
-          <div class="meal-single">
-            <div class="meal-img"></div>
-            <div class="meal-info">
-              <div class="meal-info-title">Bugger</div>
-              <div class="meal-info-price">#500</div>
-              <div class="meal-info-cart">
-                <div class="to-cart-btn">Add to cart</div>
+          <a href="./meal.html">
+            <div class="meal-single">
+              <div class="meal-img"></div>
+              <div class="meal-info">
+                <div class="meal-info-title">Cheese Bugger</div>
+                <div class="meal-info-price">
+                  <span>₦</span>500</div>
+                <div class="meal-info-cart">
+                  <div class="to-cart-btn">Add to cart</div>
+                </div>
               </div>
             </div>
-          </div>
+          </a>
 
-          <div class="meal-single">
-            <div class="meal-img"></div>
-            <div class="meal-info">
-              <div class="meal-info-title">Bugger</div>
-              <div class="meal-info-price">#500</div>
-              <div class="meal-info-cart">
-                <div class="to-cart-btn">Add to cart</div>
+          <a href="./meal.html">
+            <div class="meal-single">
+              <div class="meal-img"></div>
+              <div class="meal-info">
+                <div class="meal-info-title">Cheese Bugger</div>
+                <div class="meal-info-price">
+                  <span>₦</span>500</div>
+                <div class="meal-info-cart">
+                  <div class="to-cart-btn">Add to cart</div>
+                </div>
               </div>
             </div>
-          </div>
+          </a>
 
-          <div class="meal-single">
-            <div class="meal-img"></div>
-            <div class="meal-info">
-              <div class="meal-info-title">Bugger</div>
-              <div class="meal-info-price">#500</div>
-              <div class="meal-info-cart">
-                <div class="to-cart-btn">Add to cart</div>
+          <a href="./meal.html">
+            <div class="meal-single">
+              <div class="meal-img"></div>
+              <div class="meal-info">
+                <div class="meal-info-title">Cheese Bugger</div>
+                <div class="meal-info-price">
+                  <span>₦</span>500</div>
+                <div class="meal-info-cart">
+                  <div class="to-cart-btn">Add to cart</div>
+                </div>
               </div>
             </div>
-          </div>
+          </a>
 
           <div class="view-more">
             <div class="view-more-btn">VIEW MORE >></div>
@@ -149,10 +168,10 @@
         </div>
       </div>
     </div>
-    
+
   </div>
 
-  
+
   <div id="modal" class="modal-box">
     <div class="modal-box-content">
       <div class="modal-class-log">
@@ -170,7 +189,7 @@
           <label>
             <b>Email</b>
           </label>
-          <input class="form-input form-b-space" type="email" placeholder="@gmail.com" name="eml" required>
+          <input class="form-input form-b-space" type="email" placeholder="Enter your email" name="eml" required>
           <label>
             <b>Password</b>
           </label>
@@ -184,7 +203,7 @@
       <div class="form-box">
         <button onclick="closeModal()" type="button" class="btn-red">Cancel</button>
         Are you an admin? click
-        <a id="click-me" href="./login.html">here...</a>
+        <a id="click-me" href="./adminLogin.html">here...</a>
       </div>
 
     </div>
@@ -211,7 +230,7 @@
           <label>
             <b>Email</b>
           </label>
-          <input class="form-input form-b-space" type="email" placeholder="@gmail.com" name="eml" required>
+          <input class="form-input form-b-space" type="email" placeholder="Enter your email" name="eml" required>
 
           <label>
             <b>Telephone</b>
