--- a/UI/adminLogin.html
+++ b/UI/adminLogin.html
@@ -19,7 +19,7 @@
         <div class="menu">
             <ul class="menu-list-ul">
               <li class="menu-list"><a href="./index.html">Home</a></li>
-              <li class="menu-list">Food</li>
+              
             </ul>
           </div>
       </div>
@@ -29,10 +29,10 @@
       <div class="sign-in-header">Admin Login</div>
       <form id="sign-in-form">
         <label for='Email'>Email</label>
-        <input type='email' id='admin-email' name='email' placeholder="@gmail.com" required>
+        <input type='email' id='admin-email' name='email' placeholder="Enter your email" required>
 
         <label for='Username'>Password</label>
-        <input type='password' id='admin-password' name='password' placeholder="" required>
+        <input type='password' id='admin-password' name='password' placeholder="Enter password" required>
       </form>
       <div id='btn-container'>
         <a id="anc-ask" href="./admin.html">
